--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
-div {
-    background-color: red;
-    color: white;
-    font-size: 32px;
-    text-align: center;
+.red {
+    font-family: Verdana, "DejaVu Sans", sans-serif;
+    background-color: rgb(255, 146, 146);
+    color: rgb(24, 24, 24);
+}
+
+#n2 {
+    color: rgb(18, 18, 204);
+    font-size: 36px;
+}
+
+.n3 {
+    font-size: 24px;
+}
+
+#n4 {
+    background-color: rgb(28, 200, 28);
+    font-size: 24px;
     font-weight: bold;
 }
