--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-.avatar.proportioned {
-    height: auto;
-    width: 300px;
-}
-.avatar.distorted {
-    width: 200px;
-    height: 400px;
+div p {
+    background-color: yellow;
+    color: red;
+    font-size: 20px;
+    text-align: center;
 }
