--- a/style.css
+++ b/style.css
@@ -1,46 +1,18 @@
-*,
-*:after,
-*:before {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
-body {
-  background: #eee;
-  font-family: sans-serif;
-}
-
-.card {
+.container {
+  background: dodgerblue;
+  border: 4px solid midnightblue;
   width: 400px;
-  background: #fff;
-  margin: 16px auto;
-  padding: 8px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.title {
-  background: #e3f4ff;
-  font-size: 16px;
-  padding: 8px;
-}
-
-.content {
-  background: #e3f4ff;
-  margin-top: 8px;
-  padding: 16px 8px;
-}
-
-.button-container {
-  background: #e3f4ff;
-  margin-top: 8px;
-  padding: 8px;
+.box {
+  background: palevioletred;
+  font-weight: bold;
   text-align: center;
-}
-
-button {
-  background: white;
-  border: 1px solid #eee;
-  padding: 8px 24px;
-  display: block;
-  margin: 0 auto;
+  border: 6px solid maroon;
+  width: 80px;
+  height: 80px;
 }
