--- a/style.css
+++ b/style.css
@@ -1,18 +1,37 @@
-.container {
-  background: dodgerblue;
-  border: 4px solid midnightblue;
-  width: 400px;
-  height: 300px;
+.header  {
+  font-family: monospace;
+  background: papayawhip;
+  padding: 8px;
+
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
-.box {
-  background: palevioletred;
-  font-weight: bold;
-  text-align: center;
-  border: 6px solid maroon;
-  width: 80px;
-  height: 80px;
+.logo {
+  font-size: 48px;
+  font-weight: 900;
+  color: tomato;
+  background: white;
+  padding: 4px 32px;
+
+  margin: 0 auto;
+}
+
+ul {
+  /* this removes the dots on the list items*/
+  list-style-type: none;
+
+  padding: 0;
+}
+
+a {
+  font-size: 22px;
+  background: white;
+  padding: 8px;
+  /* this removes the line under the links */
+  text-decoration: none;
+}
+
+li {
+  display: inline;
 }
