--- a/style.css
+++ b/style.css
@@ -1,37 +1,63 @@
-.header  {
-  font-family: monospace;
-  background: papayawhip;
-  padding: 8px;
+/* this is some magical font-importing.  
+you'll learn about it later. */
+@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
+
+body {
+  margin: 0;
+  background: #eee;
+  font-family: Besley, serif;
+}
+
+.header {
+  background: white;
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 0 8px rgba(0,0,0,.1);
 
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  padding: 8px;
+}
+
+.profile-image {
+  background: rebeccapurple;
+  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
 }
 
 .logo {
-  font-size: 48px;
+  color: rebeccapurple;
+  font-size: 32px;
   font-weight: 900;
-  color: tomato;
-  background: white;
-  padding: 4px 32px;
-
-  margin: 0 auto;
+  font-style: italic;
 }
 
-ul {
-  /* this removes the dots on the list items*/
-  list-style-type: none;
-
-  padding: 0;
+button {
+  border: none;
+  border-radius: 8px;
+  background: rebeccapurple;
+  color: white;
+  padding: 8px 24px;
 }
 
 a {
-  font-size: 22px;
-  background: white;
-  padding: 8px;
-  /* this removes the line under the links */
+  /* this removes the line under our links */
   text-decoration: none;
+  color: rebeccapurple;
 }
 
-li {
-  display: inline;
+ul {
+  list-style-type: none;
+
+  display: flex;
+  padding: 0;
+  gap: 16px;
+}
+
+.left,
+.right {
+  display: flex;
+  gap: 16px;
 }
