--- a/style.css
+++ b/style.css
@@ -1,51 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+html, body {
+  height: 100%;
+}
+
 body {
-  font-family: 'Courier New', Courier, monospace;
-
-  text-align: center;
-}
-
-img {
-  width: 100px;
-  height: 100px;
-}
-
-.title {
-  font-size: 36px;
-  font-weight: 900;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 32px;
-
-  border: 1px solid green;
-}
-
-/* do not edit this footer */
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 52px;
+  font-family: Roboto, sans-serif;
+  margin: 0;
+  background: #aaa;
+  color: #333;
+  /* I'll give you this one for free lol */
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.modal {
+  background: white;
+  width: 480px;
+  border-radius: 10px;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+
+  padding: 16px;
+  display: flex;
+}
+
+.icon {
+  color: royalblue;
+  font-size: 26px;
+  font-weight: 700;
+  background: lavender;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  flex-shrink: 0;
+  margin-right: 16px;
+}
+
+.close-button {
   background: #eee;
-}
-
-.images {
+  border-radius: 50%;
+  color: #888;
+  font-weight: 400;
+  font-size: 16px;
+  height: 24px;
+  width: 24px;
   display: flex;
-  gap: 52px;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #eee;
+  padding: 0;
 
-  border: 1px solid blue;
+  margin-left: auto;
 }
 
-.item1,
-.item2,
-.item3,
-.item4 {
-  max-width: 200px;   
+button {
+  cursor: pointer;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+button.continue {
+  background: royalblue;
+  border: 1px solid royalblue;
+  color: white;
+}
+
+button.cancel {
+  background: white;
+  border: 1px solid #ddd;
+  color: royalblue;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: bold;
+  
 
   border: 1px solid red;
+}
+
+.right-text {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.text {
+  padding: 16px 0;
 }
