--- a/style.css
+++ b/style.css
@@ -1,94 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
-html, body {
-  height: 100%;
-}
-
 body {
-  font-family: Roboto, sans-serif;
+  height: 100vh;
   margin: 0;
-  background: #aaa;
-  color: #333;
-  /* I'll give you this one for free lol */
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow: hidden;
+  font-family: Roboto, sans-serif;
 }
 
-.modal {
-  background: white;
-  width: 480px;
-  border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-
-  padding: 16px;
-  display: flex;
-}
-
-.icon {
-  color: royalblue;
-  font-size: 26px;
-  font-weight: 700;
-  background: lavender;
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  flex-shrink: 0;
-  margin-right: 16px;
-}
-
-.close-button {
-  background: #eee;
-  border-radius: 50%;
-  color: #888;
-  font-weight: 400;
-  font-size: 16px;
-  height: 24px;
-  width: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #eee;
-  padding: 0;
-
-  margin-left: auto;
+img {
+  width: 600px;
 }
 
 button {
-  cursor: pointer;
-  padding: 8px 16px;
+  font-family: Roboto, sans-serif;
+  border: none;
   border-radius: 8px;
+  background: #eee;
 }
 
-button.continue {
-  background: royalblue;
-  border: 1px solid royalblue;
-  color: white;
-}
-
-button.cancel {
-  background: white;
+input {
   border: 1px solid #ddd;
-  color: royalblue;
+  border-radius: 16px;
+  padding: 8px 24px;
+  width: 400px;
+  margin-bottom: 16px;
 }
 
-.header {
-  font-size: 20px;
-  font-weight: bold;
-  
+/*SOLUTION*/
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 
   border: 1px solid red;
 }
 
-.right-text {
-  display: flex;
-  flex-wrap: wrap;
+li {
+  padding: 8px;
+  border: 1px solid blue;
 }
 
-.text {
-  padding: 16px 0;
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+
+  border: 1px solid yellow;
+}
+
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+
+  border: 1px solid green;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+
+.content {
+  text-align: center;
+
+  border: 1px solid violet;
+}
+
+.content button {
+  padding: 8px;
 }
